package rpg.core;

public enum ActionType {
    ATTACK,         // Basic attack (physical)
    ABILITY,        // Magicks, special moves
    ITEM,           // Healing, buffing potions, other consumables
    WAIT,           // Regenerate resources
    BEGIN_TURN
}