package rpg.core;

public enum RarityType {
    COMMON,
    RARE,
    LEGENDARY;
}