package rpg.core;

public enum StatType {
    STR,            // Strength
    INT,            // Intelligence
    DEX;            // Dexterity
}