package rpg.core;

public enum StatusType {
    IDLE,
    READY,
    DEAD,
    MISSING;
}